--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
     <title>Love Running</title>
 </head>
 <body>
-    <h1>Hello World!</h1>
+    <header>Header</header>
+
+    <section>Main Image</section> 
+
+    <section>Club Etos</section>
+
+    <section>Running locations, distances and times</section>
+
+    <footer>Social links here</footer>
 </body>
 </html>
