--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
         </nav>
     </header>
 
-    <section>Main Image</section>
+    <section id="hero-outer">
+        <div id="hero-image"></div>
+    </section>
 
     <section>Club Etos</section>
 
