--- a/index.html
+++ b/index.html
@@ -116,7 +116,30 @@
 
     </section>
 
-    <footer>Social links here</footer>
+    <footer>
+        <ul>
+            <li>
+                <a href="https://www.facebook.com" target="_blank" rel="noopener" 
+                aria-label="Visit our Facebook Page (opens in a new tab)"><i class="fab fa-facebook"></i></a>
+            </li>
+            
+            <li>
+                <a href="https://www.twitter.com" target="_blank" rel="noopener" 
+                aria-label="Visit our Twitter Page (opens in a new tab)"><i class="fab fa-twitter-square"></i></a>
+            </li>
+
+            <li>
+                <a href="https://www.youtube.com" target="_blank" rel="noopener" 
+                aria-label="Visit our Youtube Page (opens in a new tab)"><i class="fab fa-youtube"></i></a>
+            </li>
+
+            <li>
+                <a href="https://www.instagram.com" target="_blank" rel="noopener" 
+                aria-label="Visit our Instagram Page (opens in a new tab)"><i class="fab fa-instagram"></i></a>
+            </li>
+
+        </ul>
+    </footer>
 
     <!-- font awesome scrpit -->
     <script src="https://kit.fontawesome.com/f953067161.js" crossorigin="anonymous"></script>
