--- a/gallery.html
+++ b/gallery.html
@@ -32,7 +32,18 @@
         </nav>
     </header>
 
-   
+   <section id="photos">
+       <img src="assets/image/athletes.jpg" alt="Two athletes running together">
+       <img src="assets/image/girls.jpg" alt="Three girls at charity paint running festival">
+       <img src="assets/image/runner3.jpg" alt="Solo male runner jogging on a beach">
+       <img src="assets/image/man.jpg" alt="Man at a charity paint running festival">
+       <img src="assets/image/runner1.jpg" alt="Solo male runner jogging through phoenix park">
+       <img src="assets/image/runner2.jpg" alt="Runners competing in marathon">
+       <img src="assets/image/runner4.jpg" alt="Solo female runner jogging on a beach">
+       <img src="assets/image/running_gang.jpg" alt="Large group of runners taking part in a marathon  on a rainy day">
+       <img src="assets/image/mud-run.jpg" alt="Two women taking a muddy selfie">
+
+   </section>
 
     <footer>
         <ul class="social-networks">
